--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="#">Anuncios personalizados</a>
                 </li>
                 <li class="lista__link">
-                    <a href="#">Aluda</a>
+                    <a href="#">Alura</a>
                 </li>
             </ul>
             <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
